<resources>
    <string name="app_name">FirstNetworkApi</string>
    <string name="school_name">SCHOOL NAME</string>
    <string name="address">ADDRESS</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="more">MORE</string>
    <string name="someOtherString">Other</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="average_sat_critical_reading_score">Average SAT Critical Reading score</string>
    <string name="number_of_test_takers">Number of test takers</string>
    <string name="average_sat_math_score">Average SAT Math score</string>
    <string name="average_sat_writing_score">Average SAT Writing score</string>
    <string name="school_details">School Details:</string>
</resources>