<?xml version="1.0" encoding="utf-8"?>

<androidx.fragment.app.FragmentContainerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_container_view_tag"
    >



    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

            <TextView
                android:id="@+id/school_name"
                android:Text="School Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:id="@+id/school_details"
                android:text="@string/school_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/num_of_sat_test_takers"
                android:text="@string/number_of_test_takers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/sat_critical_reading_avg_score"
                android:text="@string/average_sat_critical_reading_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:id="@+id/sat_math_avg_score"
                android:text="@string/average_sat_math_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/sat_writing_avg_score"
                android:text="@string/average_sat_writing_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


    </LinearLayout>


</androidx.fragment.app.FragmentContainerView>